--- a/frontend-service/kubernetes-manifests/frontend.yaml
+++ b/frontend-service/kubernetes-manifests/frontend.yaml
@@ -16,9 +16,33 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: nginx:1.7.9
+        image: gcr.io/gcp-demo-189107/github.com/samuraitaiga/devsumi2019-fukuoka-gke-frontend:v1
         ports:
-        - containerPort: 80
+        - containerPort: 8080
+          protocol: TCP
         env:
         - name: MYAPP_ENV
         value: "prd"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: frontend-svc
+  namespace: default
+spec:
+  ports:
+  - port: 8080
+    protocol: TCP
+    targetPort: 8080
+  selector:
+    app: frontend
+  type: NodePort
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: basic-ingress
+spec:
+  backend:
+    serviceName: frontend-svc
+    servicePort: 8080
