--- a/frontend-service/kubernetes-manifests/frontend.yaml
+++ b/frontend-service/kubernetes-manifests/frontend.yaml
@@ -5,7 +5,12 @@ metadata:
   labels:
     app: frontend
 spec:
-  replicas: 3
+  replicas: 4
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
   selector:
     matchLabels:
       app: frontend
@@ -24,6 +29,18 @@ spec:
         env:
         - name: MYAPP_ENV
           value: "prd"
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 5
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 5
 ---
 apiVersion: v1
 kind: Service
